<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_local"
            android:icon="@drawable/local"
            android:title="@string/menu_local" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_playlist"
            android:title="@string/menu_local" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_recent"
            android:title="@string/menu_recent" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_heart_filled"
            android:title="@string/menu_fav" />
        <item
            android:id="@+id/nav_folder"
            android:icon="@drawable/folder"
            android:title="@string/menu_folder" />
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_save_filled"
            android:title="@string/menu_view" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
    </group>

</menu>
