<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/dialog_title"
        android:textColor="#000000"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/save_image_filename_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="13dp"
        android:text=""
        android:textSize="15dp" />

    <CheckBox
        android:id="@+id/text_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save_image_filename_text"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/colorPrimary"
        android:checked="false"
        android:text="@string/text_checkbox" />

    <Button
        android:id="@+id/save_image_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/save_image_btn"
        android:textColor="#FFFFFF"
        android:textSize="15dp" />

</RelativeLayout>